Fix: remove z-index from background

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -93,7 +93,6 @@ header::before {
   position: absolute;
   top: 0;
   right: 0;
-  z-index: -200;
 
   display: block;
 
